# JniCmakeTest

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/jnicmaketest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c  nativeheader.h
app/src/main/java/com/example/administrator/jnicmaketest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/jnicmaketest/: ExampleUnitTest.java
